Update node labels in site.html

--- a/apps/site/site.html
+++ b/apps/site/site.html
@@ -120,7 +120,9 @@
     <div id="package">📦</div>
 
     <!-- uzly -->
-    <div class="node" data-id="pc"      style="grid-column:1; grid-row:1;">🏠 Dům</div>
+    <div class="node" data-id="pc"      style="grid-column:1; grid-row:1;">🏠 Můj dům</div>
+    <div class="node" data-id="pc2"     style="grid-column:1; grid-row:2;">🏠 Soused</div>
+    <div class="node" data-id="pc3"     style="grid-column:1; grid-row:2;">🏠 Škola</div>
     <div class="node" data-id="switch"  style="grid-column:2; grid-row:1;">📮 Pobočka</div>
     <div class="node" data-id="router"  style="grid-column:3; grid-row:1;">🏢 Hlavní pošta</div>
     <div class="node" data-id="internet"style="grid-column:4; grid-row:2;">✈️ Letiště</div>
